--- a/androidhelpers/build.gradle
+++ b/androidhelpers/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         minSdkVersion 17
@@ -22,11 +21,30 @@ android {
     }
 }
 
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile 'junit:junit:4.12'
+}
+
+apply plugin: 'com.novoda.bintray-release'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.4.0'
+    }
+}
+
 def getBintrayUserProperty() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
     def user = properties.getProperty('bintray.user')
-    println(user)
+    //println(user)
     return user
 }
 
@@ -34,27 +52,18 @@ def getBintrayApiKeyProperty() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
     def key = properties.getProperty('bintray.apikey')
-    println(key)
+    //println(key)
     return key
 }
 
 publish {
     userOrg = 'pbteamstudio'
     groupId = 'com.pbteamstudio'
-    artifactId = 'android-helpers'
-    publishVersion = '0.0.1'
+    artifactId = 'androidhelpers'
+    publishVersion = '0.1.0'
     desc = 'Helpers for play Audio, Music. And preferences Helper.'
     website = 'https://github.com/Pryanichkin/AndroidUtils'
     bintrayUser = getBintrayUserProperty()
     bintrayKey = getBintrayApiKeyProperty()
     dryRun = 'false'
-}
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
 }
