--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@
 #Mon Sep 11 10:12:05 GMT+03:00 2017
 systemProp.https.proxyPort=8080
 systemProp.http.proxyHost=192.168.22.1
-org.gradle.jvmargs=-Xmx1536m
+# org.gradle.jvmargs=-Xmx1536m
 systemProp.https.proxyHost=192.168.22.1
 systemProp.http.proxyPort=8080
-org.gradle.daemon=true
+# org.gradle.daemon=true
 org.gradle.configureondemand=true
